Added JWT security for all the end-points

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,8 @@ server.port=8080
 server.error.include-message=always
 server.error.include-stacktrace=never
 
+jwt.secret=xUOSl1G7Ucyi4LGY08Dr33Vz1i6e3brbmSGZ2pOASuBJLpXhRdI
+
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://backupdb.nstyleintl.com:3307/vivek_db
 spring.datasource.username=vivek
